--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
 
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-                <a class="navbar-brand" href="#"> Golden </a>
+                <a class="navbar-brand" href="#"> Ada Adrianna Art </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-menu" aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
